--- a/order_consumer/src/main/resources/templates/test1.html
+++ b/order_consumer/src/main/resources/templates/test1.html
@@ -4,20 +4,37 @@
     <meta charset="UTF-8">
     <title>test1</title>
     <script src="/bootstrap/js/jquery-1.11.1.js"></script>
+    <script src="/bootstrap/js/lang/echart.js"></script>
     <script type="text/javascript">
+        var ip=null;
         $(function () {
+
             $.ajax({
                 type:"POST",
-                url:"/webSocketLogin/chef",
+                url:"/getIp",
                 dataType:"json",
                 success:function (data) {
-                    //alert("连接成功");
-                    WebSocketTest();
+                    ip=data;
+                    //WebSocketTest();
+                    $.ajax({
+                        type:"POST",
+                        url:"/webSocketLogin/chef",
+                        dataType:"json",
+                        success:function (data) {
+                            //alert("连接成功");
+                            WebSocketTest();
+                        },
+                        error:function () {
+                            alert("连接失败！");
+                        }
+                    });
                 },
                 error:function () {
                     alert("连接失败！");
                 }
             });
+
+
 
             $("#myMessage").keydown(function (event) {
                 if(event.keyCode==13){
@@ -50,9 +67,11 @@
             if ("WebSocket" in window)
             {
                 //alert("您的浏览器支持 WebSocket!");
-
+                if (ip=="12.12.43.253") {
+                    ip="localhost";
+                }
                 // 打开一个 web socket
-                var ws=new WebSocket("ws://localhost:8090/myHandler");
+                var ws=new WebSocket("ws://"+ip+":8090/myHandler");
 
                 //打开连接时
                 ws.onopen = function()
@@ -109,6 +128,36 @@
                 }
             });
         }
+
+
+
+
+
+        // 基于准备好的dom，初始化echarts实例
+        var myChart = echarts.init($("#main"));
+
+        // 指定图表的配置项和数据
+        var option = {
+            title: {
+                text: 'ECharts 入门示例'
+            },
+            tooltip: {},
+            legend: {
+                data:['销量']
+            },
+            xAxis: {
+                data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
+            },
+            yAxis: {},
+            series: [{
+                name: '销量',
+                type: 'bar',
+                data: [5, 20, 36, 10, 10, 20]
+            }]
+        };
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
     </script>
 </head>
 <body>
@@ -120,5 +169,10 @@
         <textarea id="myMessage"></textarea>
     </div>
     <button id="send">发送</button>
+
+
+
+
+    <div id="main" style="width: 600px;height:400px;"></div>
 </body>
 </html>
