--- a/order_consumer/src/main/resources/templates/pages/page/kitchen.html
+++ b/order_consumer/src/main/resources/templates/pages/page/kitchen.html
@@ -102,7 +102,7 @@
 						class="icon-bar"></span>
 				</button>
 				<img src="/img/logo.png" class="navbar-brand" /> <span
-					class="navbar-brand">${ORDER_SYS_NAME}</span>
+					class="navbar-brand"></span>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
