下单加备注

--- a/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
@@ -318,6 +318,9 @@
                     <span style="font-weight: 700; font-size: 20px;">总价:</span>
                     <span style="color: red; font-weight: 700; font-size: 20px;display: inline-block;line-height: 17px;" class="modelPrice">￥0</span>
                 </div>
+                <div>
+                    <input id="remark" placeholder="请填写备注"maxlength="10" size="50" style="outline: none;"></input>
+                </div>
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                     <button type="button" class="btn btn-primary confirmOrder" >确认提交</button>
             </div>
