--- a/order_consumer/src/main/resources/templates/test1.html
+++ b/order_consumer/src/main/resources/templates/test1.html
@@ -78,17 +78,22 @@
             var myChart = echarts.init(document.getElementById("main"));
 
             // 指定图表的配置项和数据
-            option = {
+            var option = {
+                title: {
+                    text: 'ECharts 入门示例'
+                },
+                tooltip: {},
+                legend: {
+                    data:['销量']
+                },
                 xAxis: {
-                    type: 'category',
-                    data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
+                    data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
                 },
-                yAxis: {
-                    type: 'value'
-                },
+                yAxis: {},
                 series: [{
-                    data: [820, 932, 901, 934, 1290, 1330, 1320],
-                    type: 'line'
+                    name: '销量',
+                    type: 'line',
+                    data: [5, 20, 36, 10, 10, 20]
                 }]
             };
             // 使用刚指定的配置项和数据显示图表。
