--- a/order_consumer/src/main/resources/templates/pages/admin/operatedata.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/operatedata.html
@@ -240,11 +240,12 @@
             <div
                     style="height:1px;width: 100%;background: #CCC;margin-bottom: 10px"></div>
 
-            <footer>
-                <p>&copy; $ZRXL 2020</p>
-            </footer>
+
 
             <div id="main" style="width: 1200px;height:400px;"></div>
+            <footer>
+                <p>&copy; 桂花屯 2020</p>
+            </footer>
         </div>
     </div>
 </div>
