--- a/order_consumer/src/main/resources/static/css/dashboard.css
+++ b/order_consumer/src/main/resources/static/css/dashboard.css
@@ -19,6 +19,8 @@
 
 .img-thumbnail{
   width: 150px;
+  height: 150px;
+  cursor: pointer;
 }
 .textcetern{
   text-align: center;
@@ -34,6 +36,7 @@
   cursor:pointer;
 }
 .orange{
+  color: black;
   font-size: 20px;
   padding: 2px;
   cursor:pointer;
@@ -45,7 +48,7 @@
   color: darkorange;
 }
 .green:hover{
-  color: darkgreen;
+  color: pink;
 }
 
 .sub-header {
