--- a/order_consumer/src/main/resources/templates/pages/page/kitchen.html
+++ b/order_consumer/src/main/resources/templates/pages/page/kitchen.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
         <script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 		<link rel="stylesheet" href="/css/dashboard.css">
-
+		<link rel="icon" href="/img/gui.ico">
 		<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 		<script src="/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/js/kitchen/kitchen.js"></script>
@@ -101,7 +101,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<img src="/img/logo.png" class="navbar-brand" /> <span
+				<img src="/img/logo.png" class="size" /> <span
 					class="navbar-brand"></span>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
