--- a/order_consumer/src/main/resources/templates/pages/admin/operatedata.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/operatedata.html
@@ -252,7 +252,7 @@
 <br>
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel">
+     aria-labelledby="myModalLabel"style="padding-top: 50px;">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -344,5 +344,7 @@
         </div>
     </div>
 </div>
+
+
 </body>
 </html>
